# galore-bot

./: Cargo.toml
src/: config.rs  data.rs  main.rs  messages.rs
src/command/: help.rs  mod.rs  say.rs
src/command/meme/: add.rs  delete.rs  get.rs  mod.rs
src/command/music/: join.rs  leave.rs  mod.rs  play.rs  skip.rs
src/event_handler/: message.rs  mod.rs
src/util/: fuzzy.rs  guild.rs  make_ai_prompt.rs  mod.rs  paginator.rs
src/utils/: generate_ai_response.rs  mod.rs  play.rs
