[package]
name = "galore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
config = "0.14.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
fuzzy-matcher = "0.3.7"
itertools = "0.13.0"
ollama-rs = { version = "*", features = ["stream"] }
poise = "0.6.1"
rayon = "1.10.0"
reqwest = { version = "0.11.22" }
serde = { version = "1.0.215", features = ["derive"] }
songbird = "0.4.6"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono"] }

[dependencies.symphonia]
version = "0.5.4"
features = ["mp3", "aac", "vorbis", "isomp4"]
