[package]
name = "galore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
config = "0.15.4"
fuzzy-matcher = "0.3.7"
itertools = "0.13.0"
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs" }
poise = "0.6.1"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.11.27" }
serde = { version = "1.0.215", features = ["derive"] }
songbird = "0.4.6"
text-splitter = { version = "0.20.0", features = ["markdown"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono"] }

[dependencies.symphonia]
version = "0.5.4"
features = ["mp3", "aac", "vorbis", "isomp4"]
